--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,9 @@ on:
   push:
   pull_request:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,4 +18,10 @@ jobs:
         node-version: 20
         cache: npm
     - run: npm ci
-    - run: npm run test:lint
+    - name: Commit Changes
+      run: |
+        git config --global user.name ${{ github.actor }}
+        git add .
+        if [[ $(git status --porcelain) ]]; then
+          git commit -m "Update builds" && git push
+        fi
